# Modern-Control-Engineering-Python

./: LICENSE  README.md  pyproject.toml
examples/: program-2-1.py
