[tool.poetry]
name = "modern-control-engineering-python"
version = "0.1.0"
description = "This repository contains solved exercises from the \"Modern Control Engineering\" (5th Edition) by Katsuhiko Ogata."
authors = ["Abrantedr <abrantedr@gmail.com>"]
package-mode = false
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
control = "^0.10.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
